--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Determine Modified Folders
         id: changes
         run: |
-          echo "FOLDERS=$(git diff --name-only origin/develop origin/${{ github.event.pull_request.head.ref }} | xargs -I % dirname % | sort -u)" >> $GITHUB_ENV
+          echo "::set-env name=FOLDERS::$(git diff --name-only origin/develop origin/${{ github.event.pull_request.head.ref }} | xargs -I % dirname % | sort -u)"
 
       - name: Check Modified Folders
         id: check-folders
