--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,7 +26,7 @@ jobs:
         id: changes
         run: |
           folders=$(git diff --name-only origin/develop origin/${{ github.event.pull_request.head.ref }} | xargs -I % dirname % | sort -u)
-          echo "##[set-output name=folders;]$folders"
+          echo "{FOLDERS}={$folders}" >> $GITHUB_ENV
 
       - name: Check Modified Folders
         id: check-folders
