--- a/backend-api/lib/package.json
+++ b/backend-api/lib/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config jest.config.js --coverage"
   },
   "keywords": [],
   "author": "",
