--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -26,6 +26,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        
+      - name: Create Release Branch
+        run: |
+          git checkout main
+          git checkout -b release/release/${{ github.event.inputs.release-version }}  
+          git pull origin develop
 
       - name: Merge changes from develop
         run: |
@@ -41,9 +47,8 @@ jobs:
           fi
           SELECTED_MICROSERVICES="${SELECTED_MICROSERVICES%,}" # Remove trailing comma
           IFS=',' read -ra SERVICES <<< "$SELECTED_MICROSERVICES"
-          for SERVICE in "${SERVICES[@]}"; do
-            git checkout -b release/${{ github.event.inputs.release-version }}
-            git merge origin/develop --no-commit --no-ff --strategy-option=ours -- backend-api/$SERVICE
+          for SERVICE in "${SERVICES[@]}"; do            
+            git merge develop --no-commit --no-ff --strategy-option=ours -- backend-api/$SERVICE
             git add .
             git commit -m "Merge changes from develop for microservice: $SERVICE"
           done        
