--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -29,6 +29,7 @@ jobs:
         
       - name: Create Release Branch
         run: |
+          git fetch --all
           git checkout main
           git checkout -b release/release/${{ github.event.inputs.release-version }}  
           git pull origin develop
