--- a/.github/workflows/create-release-or-hotfix.yml
+++ b/.github/workflows/create-release-or-hotfix.yml
@@ -1,4 +1,4 @@
-name: Create Branch
+name: Create Release/Hotfix Branch
 
 on:
   workflow_dispatch:
@@ -35,6 +35,7 @@ jobs:
             exit 1
           fi
           
+          git fetch --all
           git checkout $source_branch
           git pull origin $source_branch
           git checkout -b $target_branch
