--- a/.github/workflows/create-releases-tags.yml
+++ b/.github/workflows/create-releases-tags.yml
@@ -21,7 +21,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
           tag_name: v1.0.0
           release_name: Release v1.0.0
