--- a/.github/workflows/create-releases-tags.yml
+++ b/.github/workflows/create-releases-tags.yml
@@ -28,7 +28,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
 
       - name: Get Commit SHA
         id: get_commit_sha
