--- a/.github/workflows/create-releases-tags.yml
+++ b/.github/workflows/create-releases-tags.yml
@@ -17,16 +17,20 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
+      - name: Get Current Date
+        id: get_current_date
+        run: echo "::set-output name=current_date::$(date +'%Y%m%d')"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
-          tag_name: v1.0.0
-          release_name: Release v1.0.0
+          tag_name: v${{ steps.get_current_date.outputs.current_date }}
+          release_name: Release v${{ steps.get_current_date.outputs.current_date }}
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
 
       - name: Get Commit SHA
         id: get_commit_sha
