--- a/.github/workflows/create-releases-tags.yml
+++ b/.github/workflows/create-releases-tags.yml
@@ -17,16 +17,16 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
-      - name: Get Current Date
-        id: get_current_date
-        run: echo "::set-output name=current_date::$(date +'%Y%m%d')"
+      - name: Get Current Date and Time
+        id: get_current_date_time
+        run: echo "::set-output name=current_date_time::$(date +'%Y%m%d%H%M%S')"
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v${{ steps.get_current_date.outputs.current_date }}
-          release_name: Release v1${{ steps.get_current_date.outputs.current_date }}
+          tag_name: v${{ steps.get_current_date_time.outputs.current_date_time }}
+          release_name: Release v${{ steps.get_current_date_time.outputs.current_date_time }}
           draft: false
           prerelease: false
         env:
