--- a/.github/workflows/create-release-branch-v2.yml
+++ b/.github/workflows/create-release-branch-v2.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           git branch ${{ steps.branch_name.outputs.branch_name }}
           git checkout ${{ steps.branch_name.outputs.branch_name}}
-          git push origin $ {{ steps.branch_name.out.puts.branch_name }}
+          git push -u origin $ {{ steps.branch_name.out.puts.branch_name }}
