--- a/.github/workflows/create-release-branch-v2.yml
+++ b/.github/workflows/create-release-branch-v2.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Create release branch
         run: |
+          git fetch --all
           git branch ${{ steps.branch_name.outputs.branch_name }}
           git checkout ${{ steps.branch_name.outputs.branch_name}}
           git push -u origin $ {{ steps.branch_name.out.puts.branch_name }}
